# illuminating-patches-for-seto

./: .gitignore  CMakeLists.txt  README.md  ff5.tbl
include/: drivers.h  ips.h
src/: drivers.c  ips.c  main.c
